put counter attack in getAtkModel